; ModuleID = '/home/carl/AnghaBench/linux/drivers/soc/qcom/extr_qmi_interface.c_qmi_txn_cancel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soc/qcom/extr_qmi_interface.c_qmi_txn_cancel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qmi_txn = type { i32, i32, %struct.qmi_handle* }
%struct.qmi_handle = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @qmi_txn_cancel(%struct.qmi_txn* %0) #0 {
  %2 = alloca %struct.qmi_txn*, align 8
  %3 = alloca %struct.qmi_handle*, align 8
  store %struct.qmi_txn* %0, %struct.qmi_txn** %2, align 8
  %4 = load %struct.qmi_txn*, %struct.qmi_txn** %2, align 8
  %5 = getelementptr inbounds %struct.qmi_txn, %struct.qmi_txn* %4, i32 0, i32 2
  %6 = load %struct.qmi_handle*, %struct.qmi_handle** %5, align 8
  store %struct.qmi_handle* %6, %struct.qmi_handle** %3, align 8
  %7 = load %struct.qmi_handle*, %struct.qmi_handle** %3, align 8
  %8 = getelementptr inbounds %struct.qmi_handle, %struct.qmi_handle* %7, i32 0, i32 0
  %9 = call i32 @mutex_lock(i32* %8)
  %10 = load %struct.qmi_txn*, %struct.qmi_txn** %2, align 8
  %11 = getelementptr inbounds %struct.qmi_txn, %struct.qmi_txn* %10, i32 0, i32 0
  %12 = call i32 @mutex_lock(i32* %11)
  %13 = load %struct.qmi_handle*, %struct.qmi_handle** %3, align 8
  %14 = getelementptr inbounds %struct.qmi_handle, %struct.qmi_handle* %13, i32 0, i32 1
  %15 = load %struct.qmi_txn*, %struct.qmi_txn** %2, align 8
  %16 = getelementptr inbounds %struct.qmi_txn, %struct.qmi_txn* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @idr_remove(i32* %14, i32 %17)
  %19 = load %struct.qmi_txn*, %struct.qmi_txn** %2, align 8
  %20 = getelementptr inbounds %struct.qmi_txn, %struct.qmi_txn* %19, i32 0, i32 0
  %21 = call i32 @mutex_unlock(i32* %20)
  %22 = load %struct.qmi_handle*, %struct.qmi_handle** %3, align 8
  %23 = getelementptr inbounds %struct.qmi_handle, %struct.qmi_handle* %22, i32 0, i32 0
  %24 = call i32 @mutex_unlock(i32* %23)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @idr_remove(i32*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
